--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
+body {
+  min-height: 120vh;
+}
+
 .intro-div, .input-div {
   position: absolute;
   left: 50%;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-}
-
-.input-div {
-  visibility: hidden;
 }
 
 .card {
