--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
   transform: translate(-50%, -50%);
 }
 
+.invisible {
+  visibility: hidden;
+}
+
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
