changed layout to top and bottom divs, with bottom div separated between left and right divs

--- a/style.css
+++ b/style.css
@@ -1,9 +1,21 @@
-body {
+.top-div {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.bottom-div {
   height: 96vh;
   padding: 0 3%;
   display: flex;
   justify-content: space-between;
   gap: 4%;
+}
+
+.invisible {
+  visibility: hidden;
 }
 
 .left-div {
@@ -49,6 +61,7 @@ body {
 
 .text-container input {
   width: 100%;
+  margin: 10px 0;
   border: none;
 }
 
