--- a/style.css
+++ b/style.css
@@ -36,6 +36,8 @@
 
 .avatar-card {
   width: 200px;
+  min-height: 310px;
+  max-height: 310px;
   margin-bottom: 40px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
@@ -53,6 +55,8 @@
 .text-container {
   padding: 2px 16px;
   text-align: left;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .text-container input {
