--- a/style.css
+++ b/style.css
@@ -28,6 +28,57 @@
   flex-grow: 1;
 }
 
+.round-div {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.round-left-div {
+  min-width: 70%;
+  max-width: 70%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.round-right-div {
+  width: 30%;
+}
+
+.left-contestant-div, .right-contestant-div {
+  min-width: 50%;
+  max-width: 50%;
+  min-height: 390px;
+  max-height: 390px;
+  display: flex;
+  flex-direction: column;
+}
+
+.left-contestant-details, .right-contestant-details {
+  min-height: 80px;
+  max-height: 80px;
+}
+
+.left-contestant-details {
+  width: 100%;
+  text-align: left;
+}
+
+.right-contestant-details {
+  width: 100%;
+  text-align: right;
+}
+
+.left-contestant-cards, .right-contestant-cards {
+  display: flex;
+}
+
+.left-contestant-controls, .right-contestant-controls {
+  display: flex;
+  flex-direction: column;
+  margin: 0 10px;
+}
+
 .avatar-cards {
   display: flex;
   flex-wrap: wrap;
@@ -43,7 +94,7 @@
   transition: 0.3s;
 }
 
-.avatar-card:hover {
+.avatar-card:hover, .control-card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
@@ -63,6 +114,18 @@
   width: 100%;
   margin: 10px 0;
   border: none;
+}
+
+.control-card {
+  width: 54px;
+  height: 54px;
+  margin-bottom: 20px;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 54px;
+  font-size: 18px;  
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
 }
 
 .link {
