--- a/style.css
+++ b/style.css
@@ -38,11 +38,25 @@
   min-width: 70%;
   max-width: 70%;
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
 }
 
 .round-right-div {
   width: 30%;
+}
+
+.contestants-div {
+  min-width: 100%;
+  max-width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.round-history {
+  min-width: 100%;
+  max-width: 100%;
+  margin-left: 20%;
 }
 
 .left-contestant-div, .right-contestant-div {
