changed round history <ol> to <ul>, prepended instead of appended <li> to round history, color-coded round history <li> text, updated script to decrement timer every play to a minimum of 3 secs

--- a/style.css
+++ b/style.css
@@ -59,6 +59,10 @@
   margin-left: 20%;
 }
 
+.round-history li {
+  width: 50%;
+}
+
 .left-contestant-div, .right-contestant-div {
   min-width: 50%;
   max-width: 50%;
