--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@
   gap: 40px;
 }
 
-.avatar-card {
+.avatar-card, .champion-card {
   width: 200px;
   min-height: 310px;
   max-height: 310px;
@@ -119,7 +119,7 @@
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
-.avatar-card img {
+.avatar-card img, .champion-card img {
   width: 200px;
   height: 200px;
 }
